@@ -1,3 +1,11 @@
+2000-11-28  olicha  <olivier.chapuis@free.fr>
+
+	* fvwm/placement.c (test_fit):
+	(get_next_y):
+	(get_next_x):
+	A try for a final cleverplacement algorithm. The code is
+	not pretty for pratical reason, but it will be.
+	
 2000-11-28  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/builtins.c (FreeDecorFace):
